# tppa

./: README.md  tppa.cabal
app/: Main.hs
src/: Core.hs  Lexer.x  Parser.y  Proof.hs  Tactic.hs  Util.hs  tppa.v
test/: ParserSpec.hs  ProofSpec.hs
