name:                tppa
version:             0.1.0.0
synopsis:            a tiny propositional proof assistant
description:         Please see README.md
homepage:            https://github.com/zjhmale/tppa
license:             BSD3
license-file:        LICENSE
author:              zjhmale
maintainer:          zjhmale@gmail.com
copyright:           2016 zjhmale
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Util
                     , Tactic
                     , Lexer
                     , Parser
                     , Proof
  build-depends:       base >= 4.7 && < 5
                     , pretty
                     , array
  build-tools:         happy
                     , alex
  default-extensions:  RankNTypes
  default-language:    Haskell2010

executable tppa
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tppa
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tppa-test
  type:                exitcode-stdio-1.0
  other-modules:       ParserSpec
                     , ProofSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tppa
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/tppa
